# yandex-backend

./: .gitignore
sprint1/problems/async_server/precode/src/: http_server.h
sprint1/problems/async_server/solution/src/: http_server.cpp  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: http_server.h  main.cpp  request_handler.h  tagged.h
sprint1/problems/final_task/src/: model.cpp
sprint1/problems/map_json/precode/src/: http_server.cpp  main.cpp  request_handler.h
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/: README.md
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/precode/src/: main.cpp  program  seabattle.h
sprint1/problems/sync_client/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp  main.cpp.save
sprint1/samples/tcp-udp/client/: CMakeLists.txt  client.cpp
sprint1/samples/tcp-udp/server/: CMakeLists.txt
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile  Dockerfile.save
sprint2/problems/command_line/solution/src/: http_server.h  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  static_file_handler.cpp  static_file_handler.h  ticker.h
sprint2/problems/game/: CMakeLists.txt
sprint2/problems/game/src/: json_loader.cpp  logger.h  request_handler.h
sprint2/problems/game_state/solution/src/: model.cpp  model.h  request_handler.h
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile  Dockerfile.txt  conanfile.txt
sprint2/problems/join_game/solution/src/: model.cpp  model.h  request_handler.h  static_file_handler.cpp
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/src/: json_loader.cpp  model.cpp  model.h  request_handler.h
sprint2/problems/server_logging/solution/: Dockerfile  Dockerfile.txt
sprint2/problems/server_logging/solution/src/: logger.cpp  request_handler.h
sprint2/problems/static_content/precode/: CMakeLists.txt
sprint2/problems/static_content/precode/src/: main.cpp
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: main.cpp  request_handler.h
sprint2/problems/time_control/solution/: Dockerfile
sprint2/problems/time_control/solution/src/: main.cpp  model.cpp  model.h  request_handler.h
sprint3/problems/ammo/solution/: ammo.txt  load.yaml
sprint3/problems/final_task/solution/src/: collision_detector.cpp  geom.h  model.cpp
sprint3/problems/find_return/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/find_return/solution/src/: collision_detector.cpp  extra_data.h  json_loader.cpp  model.h  request_handler.h
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/precode/tests/: collision-detector-tests.cpp
sprint3/problems/gather-tests/solution/: Dockerfile
sprint3/problems/gather-tests/solution/src/: collision_detector.cpp  collision_detector.h
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/instrumentation/solution/: event2dot
sprint3/problems/scores/solution/: Dockerfile
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/: CMakeLists.txt
(+30 files in other folders)
